Fix instagram feed caption overflow bug

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -39,7 +39,7 @@
       font-weight:300;
       font-size:0.875em;
       text-align:center;
-      height:4em;
+      height:3.5em;
       overflow:hidden;
 
       @include mobile{
